--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="./demos">
+    <base href="./igniteui-js-blocks/demos">
     <meta charset="UTF-8">
     <title>IgniteUI JS Blocks</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
