--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-typescript.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/zero-blocks@0.2.0-PreRelease.0/zero-blocks.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/zero-blocks@0.2.0-PreRelease.0/fonts/material-icons.css">
 	
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
