(improvement) initial styling for the code section

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 	<script src="https://unpkg.com/systemjs/dist/system.src.js"></script>
 	<script src="https://unpkg.com/hammerjs/hammer.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/prism.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/plugins/line-numbers/prism-line-numbers.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-typescript.min.js"></script>
 	<!--Scripts End-->
 	<!--Styles Begin-->
 	<link rel="stylesheet" href="https://unpkg.com/zero-blocks@0.2.0-PreRelease.0/fonts/material-icons.css">
 	<link rel="stylesheet" href="https://unpkg.com/zero-blocks@0.2.0-PreRelease.0/zero-blocks.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/plugins/line-numbers/prism-line-numbers.css">
 	<link rel="stylesheet" href="demo.css">
+	<link rel="stylesheet" href="code-blocks-theme.css">
 	<!--<link type="text/css" rel="stylesheet" href="index.css">-->
 	<!--Styles End-->
-	<!--<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-	<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 	<!-- 2. Configure SystemJS -->
 	<script src="systemjs.config.js"></script>
 	<script>
