--- a/src/icon/icon.html
+++ b/src/icon/icon.html
@@ -1,5 +1,5 @@
 <span class="igx-icon" [class.igx-icon--inactive]="!getActive">
-    <i *ngIf="getFontSet == 'material'" class="material-icons">
+    <i #icon *ngIf="getFontSet == 'material'" class="material-icons">
         {{ getIconName }}
     </i>
 </span>
