--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<h2>Take a look at the sample application we’ve developed to get a taste of what you can build with <strong>IgniteUI Blocks</strong>.</h2>
 				</header>
 				<div class="flex-container buttons-wrap">
-					<button class="btn primary-btn" igButton="raised" (click)="changeLink()">PREVIEW IN BROWSER</button>
+					<a class="btn primary-btn" igButton="raised" target="_blank" href="https://igniteui.github.io/warehouse-js-blocks/">PREVIEW IN BROWSER</a>
 				</div>
 			</article>
 		</section>
