--- a/src/badge/badge.html
+++ b/src/badge/badge.html
@@ -1,6 +1,6 @@
 <div [ngClass]="setPosition()">
-	<div class="ig-badge__circle" [ngClass]="setClasses()">
-		<span *ngIf="!iconBdg" class="ig-badge__circle-value">{{value}}</span>
-		<i *ngIf="iconBdg" class="material-icons ig-badge__circle-value">{{iconBdg}}</i>
+	<div class="igx-badge__circle" [ngClass]="setClasses()">
+		<span *ngIf="!iconBdg" class="igx-badge__circle-value">{{value}}</span>
+		<i *ngIf="iconBdg" class="material-icons igx-badge__circle-value">{{iconBdg}}</i>
 	</div>
 </div>
