(update) component samples updated

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-typescript.min.js"></script>
 	<!--Scripts End-->
 	<!--Styles Begin-->
-	<link rel="stylesheet" href="https://unpkg.com/zero-blocks@0.2.0-PreRelease.0/fonts/material-icons.css">
-	<link rel="stylesheet" href="https://unpkg.com/zero-blocks@0.2.0-PreRelease.0/zero-blocks.css">
+	<link rel="stylesheet" href="https://unpkg.com/igniteui-js-blocks@0.2.1/fonts/material-icons.css">
+	<link rel="stylesheet" href="https://unpkg.com/igniteui-js-blocks@0.2.1/zero-blocks.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/plugins/line-numbers/prism-line-numbers.css">
 	<link rel="stylesheet" href="./styles/gh-pages.css">
