(improve) synchronize menus and samples on launch and route changes (improve) add loading animation (improve) add border around mobile example

--- a/index.html
+++ b/index.html
@@ -94,7 +94,11 @@
 				</div>
 			</article>
 		</section>
-		<sample-app>Loading...</sample-app>
+		<sample-app>
+			<div class="preloader">
+				<img src="./demos/images/ripple.gif" alt="preloader image">
+			</div>
+		</sample-app>
 	</div>
 	<!--Main Content ENDS-->
 	<!--<div class="wholeContent">-->
