--- a/src/input/igtext.html
+++ b/src/input/igtext.html
@@ -14,7 +14,7 @@
         [(ngModel)]="value"
         (focus)="onFocus($event)"
         (blur)="onBlur($event)"/>
-    <label igLabel [attr.for]="id">
+    <label igxLabel [attr.for]="id">
         <ng-content></ng-content>
     </label>
 </div>
