--- a/src/input/igtextarea.html
+++ b/src/input/igtextarea.html
@@ -14,7 +14,7 @@
         (focus)="onFocus($event)"
         (blur)="onBlur($event)">
     </textarea>
-    <label igLabel [attr.for]="id">
+    <label igxLabel [attr.for]="id">
         <ng-content></ng-content>
     </label>
 </div>
