(update) sample references to new selector names

--- a/demos/app/modal/sample.html
+++ b/demos/app/modal/sample.html
@@ -44,11 +44,11 @@
         action2ButtonColor="white"
         backgroundClick="true">
         <div class="ig-form-group">
-            <input type="text" igInput />
+            <input type="text" igx-input />
             <label igxLabel>Username</label>
         </div>
         <div class="ig-form-group">
-            <input type="password" igInput />
+            <input type="password" igx-input />
             <label igxLabel>Password</label>
         </div>
     </ig-modal>
