Fix zone.js version for GH pages. The latest package from unpkg.com seems flaky

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 	<!--Scripts Begin-->
 	<script src="https://rawgit.com/web-animations/web-animations-js/master/web-animations.min.js"></script>
 	<script src="https://unpkg.com/core-js/client/shim.min.js"></script>
-	<script src="https://unpkg.com/zone.js/dist/zone.js"></script>
+	<script src="https://unpkg.com/zone.js@0.6.23?main=browser"></script>
 	<script src="https://unpkg.com/reflect-metadata/Reflect.js"></script>
 	<script src="https://unpkg.com/systemjs/dist/system.src.js"></script>
 	<script src="https://unpkg.com/hammerjs/hammer.js"></script>
@@ -113,7 +113,7 @@
 				    <a href="http://www.igniteui.com/" target="_blank"><img class="github-link" src="demos/images/github-link.png"></a>
 			    </div>
 		    </div>
-				
+
 		    <div class="row">
 			    <div>
 				    <h1>Angular 2 development. One block at a time.</h1>
