FIX: Styles after version change from zero-blocks to igniteui-js-blocks

--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
 	<!-- 2. Configure SystemJS -->
 	<script src="systemjs.config.js"></script>
 	<script>
-        System.import('app/main.ts').catch(function(err){ console.error(err); });
+        System.import('app').catch(function(err){ console.error(err); });
     </script>
 </head>
 
