--- a/demos/app/navbar/sample.html
+++ b/demos/app/navbar/sample.html
@@ -1,1 +1,5 @@
-<igx-navbar [title]="currentView" icon="arrow_back"></igx-navbar>
+<igx-navbar [title]="currentView"
+            actionButtonIcon="arrow_back"
+            [isActionButtonVisible]="canGoBack()"
+            (onAction)="navigateBack()">
+</igx-navbar>
