--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<!--Scripts Begin-->
 	<script src="https://rawgit.com/web-animations/web-animations-js/master/web-animations.min.js"></script>
 	<script src="https://unpkg.com/core-js/client/shim.min.js"></script>
-	<script src="https://unpkg.com/zone.js@0.6.23?main=browser"></script>
+	<script src="https://unpkg.com/zone.js@0.7.6/dist/zone.js"></script>
 	<script src="https://unpkg.com/reflect-metadata/Reflect.js"></script>
-	<script src="https://unpkg.com/systemjs/dist/system.src.js"></script>
+	<script src="https://unpkg.com/systemjs@0.19.44/dist/system.js"></script>
 	<script src="https://unpkg.com/hammerjs/hammer.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/prism.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/plugins/line-numbers/prism-line-numbers.js"></script>
@@ -29,8 +29,10 @@
 	<!-- 2. Configure SystemJS -->
 	<script src="systemjs.config.js"></script>
 	<script>
-        System.import('app').catch(function(err){ console.error(err); });
-    </script>
+		SystemJS.import('app').catch(function (err) {
+			console.error(err);
+		});
+	</script>
 </head>
 
 <body>
