--- a/demos/app/tabbar/template.html
+++ b/demos/app/tabbar/template.html
@@ -1,2 +1,2 @@
 <h1>Tab 3 Content</h1>
-<p>This is template</p>
+<p>This is content is loaded from file "template.html" through child route of the router and CustomContentComponent.</p>
