(UPDATE) Demo pages design

--- a/demos/app/icon/icon.sample.html
+++ b/demos/app/icon/icon.sample.html
@@ -1,14 +1,79 @@
-<div style="margin: 20px">
-    <h4>Default Material</h4>
-    <igx-icon name="home"></igx-icon>
-</div>
+<div class="sample-wrapper">
+    <div class="sample-header">
+        <h1 class="title">Icons</h1>
+        <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pretium lorem id tristique sagittis. Proin in mauris ac
+            tortor placerat sollicitudin eu sit amet leo. Aliquam consectetur eu sem vitae egestas. Class aptent taciti sociosqu
+            ad litora torquent per conubia nostra, per inceptos himenaeos. Cras a erat sagittis, iaculis urna ac, mollis
+            elit. Vestibulum accumsan ex at mauris sagittis, sed tincidunt justo fringilla. Phasellus vel porttitor odio.
+            Aenean quis nisi non ex ultrices efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec
+            nec felis cursus erat mattis venenatis. Curabitur congue ullamcorper nisi nec blandit. Fusce molestie consectetur
+            urna sed feugiat.
+        </p>
+    </div>
+    <section class="sample-content">
+        <article>
+            <h4 class="sample-title">Default</h4>
+            <div class="sample-icons">
+                <igx-icon name="3d_rotation"></igx-icon>
+                <igx-icon name="accessibility"></igx-icon>
+                <igx-icon name="accessible"></igx-icon>
+                <igx-icon name="account_balance"></igx-icon>
+                <igx-icon name="account_box"></igx-icon>
+                <igx-icon name="account_circle"></igx-icon>
+                <igx-icon name="add_shopping_cart"></igx-icon>
+                <igx-icon name="alarm"></igx-icon>
+                <igx-icon name="android"></igx-icon>
+                <igx-icon name="announcement"></igx-icon>
+                <igx-icon name="aspect_ratio"></igx-icon>
+                <igx-icon name="assessment"></igx-icon>
+                <igx-icon name="assignment"></igx-icon>
+                <igx-icon name="autorenew"></igx-icon>
+                <igx-icon name="backup"></igx-icon>
+            </div>
+        </article>
 
-<div style="margin: 20px">
-    <h4>Inactive Icon</h4>
-    <igx-icon fontSet="material" name="home" color="blue" isActive="false"></igx-icon>
-</div>
 
-<div style="margin: 20px">
-    <h4>Custom Color</h4>
-    <igx-icon name="search" color="#e41c77"></igx-icon>
+        <article>
+            <h4 class="sample-title">Inactive</h4>
+            <div class="sample-icons">
+                <igx-icon fontSet="material" name="query_builder" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="pets" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="question_answer" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="receipt" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="play_for_work" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="rowing" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="schedule" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="settings_ethernet" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="settings_power" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="settings" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="album" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="copyright" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="favorite" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="face" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="extension" color="blue" isActive="false"></igx-icon>
+            </div>
+        </article>
+
+        <article>
+            <h4 class="sample-title">Custom Color</h4>
+            <div class="sample-icons">
+                <igx-icon name="cast" color="#e41c77"></igx-icon>
+                <igx-icon name="computer" color="#FFBE0B"></igx-icon>
+                <igx-icon name="desktop_mac" color="#FB5607"></igx-icon>
+                <igx-icon name="developer_board" color="#8338EC"></igx-icon>
+                <igx-icon name="device_hub" color="#3A86FF"></igx-icon>
+                <igx-icon name="devices_other" color="#2A1E5C"></igx-icon>
+                <igx-icon name="gamepad" color="#373F51"></igx-icon>
+                <igx-icon name="keyboard" color="#008DD5"></igx-icon>
+                <igx-icon name="router" color="#F56476"></igx-icon>
+                <igx-icon name="scanner" color="#DFBBB1"></igx-icon>
+                <igx-icon name="tablet_mac" color="#662E9B"></igx-icon>
+                <igx-icon name="toys" color="#43BCCD"></igx-icon>
+                <igx-icon name="watch" color="#444140"></igx-icon>
+                <igx-icon name="videogame_asset" color="#1E1E24"></igx-icon>
+                <igx-icon name="speaker" color="#FB8B24"></igx-icon>
+            </div>
+        </article>
+    </section>
 </div>
