--- a/demos/app/navigation-drawer/main.html
+++ b/demos/app/navigation-drawer/main.html
@@ -31,16 +31,16 @@
     <button (click)="open = !open;"> Toggle opened</button>
     <button (click)="testToggle()"> Toggle method on ViewChild</button>
 
-    <div template="ngIf showGestureToggle">
+    <div ng-template="ngIf showGestureToggle">
         <label><input type="checkbox" [(ngModel)]="gestures" /> Gestures enabled </label>
     </div>
 
-    <div template="ngIf showPositions">
+    <div ng-template="ngIf showPositions">
         <button (click)="position = 'left';"> Left</button>
         <button (click)="position = 'right';"> Right</button>
     </div>
 
-    <div template="ngIf showPinToggle">
+    <div ng-template="ngIf showPinToggle">
         <button (click)="pin = true;"> pin</button>
         <button (click)="pin = false;"> unpin</button>
     </div>
