--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 	<!--Scripts Begin-->
 	<script src="https://rawgit.com/web-animations/web-animations-js/master/web-animations.min.js"></script>
 	<script src="https://unpkg.com/core-js/client/shim.min.js"></script>
-	<script src="https://unpkg.com/zone.js@0.6.23?main=browser"></script>
+	<script src="https://unpkg.com/zone.js@0.8.10/dist/zone.min.js"></script>
 	<script src="https://unpkg.com/reflect-metadata/Reflect.js"></script>
-	<script src="https://unpkg.com/systemjs/dist/system.src.js"></script>
+	<script src="https://unpkg.com/systemjs@0.20.12/dist/system.js"></script>
 	<script src="https://unpkg.com/hammerjs/hammer.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/prism.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/plugins/line-numbers/prism-line-numbers.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/components/prism-typescript.min.js"></script>
 	<!--Scripts End-->
 	<!--Styles Begin-->
-	<link rel="stylesheet" href="https://unpkg.com/igniteui-js-blocks@0.2.3/fonts/material-icons.css">
-	<link rel="stylesheet" href="https://unpkg.com/igniteui-js-blocks@0.2.3/zero-blocks.css">
+	<link rel="stylesheet" href="https://unpkg.com/igniteui-js-blocks@4.0.0/fonts/material-icons.css">
+	<link rel="stylesheet" href="https://unpkg.com/igniteui-js-blocks@4.0.0/zero-blocks.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/themes/prism.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.1/plugins/line-numbers/prism-line-numbers.css">
 	<link rel="stylesheet" href="./styles/gh-pages.css">
