--- a/demos/navigation-drawer/main.html
+++ b/demos/navigation-drawer/main.html
@@ -34,16 +34,16 @@
         <button (click)="open = !open;"> Toggle opened</button>
         <button (click)="testToggle()"> Toggle method on ViewChild</button>
 
-        <div template="ngIf showGestureToggle">
+        <div *ngIf="showGestureToggle">
             <label><input type="checkbox" [(ngModel)]="gestures" /> Gestures enabled </label>
         </div>
 
-        <div template="ngIf showPositions">
+        <div *ngIf="showPositions">
             <button (click)="position = 'left';"> Left</button>
             <button (click)="position = 'right';"> Right</button>
         </div>
 
-        <div template="ngIf showPinToggle">
+        <div *ngIf="showPinToggle">
             <button (click)="pin = true;"> pin</button>
             <button (click)="pin = false;"> unpin</button>
         </div>
