(UPDATE) Switch from grid-layout to flexbox for demos. (ADD) Column class to each sample group

--- a/demos/app/icon/icon.sample.html
+++ b/demos/app/icon/icon.sample.html
@@ -12,7 +12,7 @@
         </p>
     </div>
     <section class="sample-content">
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Default</h4>
             <div class="sample-icons">
                 <igx-icon name="3d_rotation"></igx-icon>
@@ -33,7 +33,7 @@
             </div>
         </article>
 
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Inactive</h4>
             <div class="sample-icons">
                 <igx-icon fontSet="material" name="query_builder" color="blue" isActive="false"></igx-icon>
@@ -54,7 +54,7 @@
             </div>
         </article>
 
-        <article>
+        <article class="sample-column">
             <h4 class="sample-title">Custom Color</h4>
             <div class="sample-icons">
                 <igx-icon name="cast" color="#e41c77"></igx-icon>
