pull from master

--- a/demos/app/icon/icon.sample.html
+++ b/demos/app/icon/icon.sample.html
@@ -68,5 +68,8 @@
                 <igx-icon name="speaker" color="#FB8B24"></igx-icon>
             </div>
         </article>
+        <article>   
+            <igx-datePicker [formatter]="customFormatter"></igx-datePicker>
+        </article>
     </section>
 </div>
