--- a/demos/index.html
+++ b/demos/index.html
@@ -30,7 +30,7 @@
             <h4 class="preloader-title">Please wait...<br><span id="funny" class="funny">... we're testing your patience.</span></h4>
         </div>
     </sample-app>
-    <script src="../demos/preloader.js" defer></script>
+    <!--<script src="../demos/preloader.js" defer></script>-->
 </body>
 
 </html>
