Add hamburger menu to page header section of each demo component.

--- a/demos/app/icon/icon.sample.html
+++ b/demos/app/icon/icon.sample.html
@@ -1,10 +1,5 @@
 <div class="sample-wrapper">
-    <div class="sample-header">
-        <h1 class="title">Icons</h1>
-        <p class="description">
-            Allows you to add material icons to your application
-        </p>
-    </div>
+    <page-header title="Icons" description="Allows you to add material icons to your application."></page-header>
     <section class="sample-content">
         <article class="sample-column">
             <h4 class="sample-title">Default</h4>
