Carousel swipe not working on mobile
- Removed the old way touch events were handled.
- Removed redundant imports in the carousel.
- Upgraded to the latest version of TSlint and removed submodule rule for rxjs/@angular

--- a/src/carousel/slide.html
+++ b/src/carousel/slide.html
@@ -4,7 +4,7 @@
     class="igx-slide"
     [attr.aria-selected]="active"
     [attr.aria-live]="active ? 'polite' : null"
-    [attr.tabIndex]="active ? 1 : -1"
+    [attr.tabIndex]="active ? 0 : null"
 >
     <ng-content></ng-content>
 </div>
