chore: add directives to demo nav, drop extra styles

--- a/demos/app/pageHeading/pageHeading.template.html
+++ b/demos/app/pageHeading/pageHeading.template.html
@@ -1,6 +1,6 @@
 <div class="sample-header">
     <h1 class="title">
-        <button igxButton="icon" igxNavToggleAction="navdrawer" class="ham-button">
+        <button igxButton="icon" igxToggleAction="navdrawer" class="ham-button">
             <igx-icon fontSet="material" name="menu"></igx-icon>
         </button>{{ title }}
     </h1>
