fix(themes): icon fix for inactive state

--- a/demos/app/icon/icon.sample.html
+++ b/demos/app/icon/icon.sample.html
@@ -25,21 +25,21 @@
         <article class="sample-column">
             <h4 class="sample-title">Inactive</h4>
             <div class="sample-icons">
-                <igx-icon fontSet="material" name="query_builder" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="pets" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="question_answer" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="receipt" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="play_for_work" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="rowing" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="schedule" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="settings_ethernet" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="settings_power" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="settings" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="album" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="copyright" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="favorite" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="face" color="blue" isActive="false"></igx-icon>
-                <igx-icon fontSet="material" name="extension" color="blue" isActive="false"></igx-icon>
+                <igx-icon fontSet="material" name="query_builder" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="pets" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="question_answer" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="receipt" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="play_for_work" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="rowing" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="schedule" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="settings_ethernet" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="settings_power" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="settings" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="album" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="copyright" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="favorite" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="face" color="blue" [isActive]="false"></igx-icon>
+                <igx-icon fontSet="material" name="extension" color="blue" [isActive]="false"></igx-icon>
             </div>
         </article>
 
