--- a/demos/app/pageHeading/pageHeading.template.html
+++ b/demos/app/pageHeading/pageHeading.template.html
@@ -1,8 +1,8 @@
 <div class="sample-header">
     <h1 class="title">
-        <!-- <button igxButton="icon" igxToggleAction="navdrawer" class="ham-button">
+        <button igxToggleAction="navdrawer" [closeOnOutsideClick]="false" igxButton="icon" igxRipple igxRippleCentered="true">
             <igx-icon fontSet="material" name="menu"></igx-icon>
-        </button> -->
+        </button>
         {{ title }}
     </h1>
     <p class="description">
