--- a/demos/app/icon/icon.sample.html
+++ b/demos/app/icon/icon.sample.html
@@ -1,15 +1,14 @@
 <div class="sample-wrapper">
-    <page-header title="Icons" description="Allows you to add material icons to your application."></page-header>
+    <page-header title="Icons" description="Allows you to add icons to your application."></page-header>
     <section class="sample-content">
         <article class="sample-column">
             <h4 class="sample-title">Default</h4>
             <div class="sample-icons">
-                <!-- Implicit ligature declaration -->
-                <igx-icon fontSet="material" name="accessibility"></igx-icon>
-                <!-- Using icon glyph fonts -->
-                <igx-icon fontSet="font-awesome" iconName="fa-headphones"></igx-icon>
                 <!-- Explicit ligature declaration -->
                 <igx-icon fontSet="material">accessible</igx-icon>
+                <!-- Implicit ligature declaration -->
+                <igx-icon fontSet="material" name="accessibility"></igx-icon>
+                <!-- No need to specify the fontSet if it's the default one -->
                 <igx-icon name="account_balance"></igx-icon>
                 <igx-icon name="account_box"></igx-icon>
                 <igx-icon name="account_circle"></igx-icon>
@@ -66,5 +65,18 @@
                 <igx-icon name="speaker" color="#FB8B24"></igx-icon>
             </div>
         </article>
+
+        <article class="sample-column">
+            <h4 class="sample-title">Using Font-Awesome Icons</h4>
+            <!-- Using icon glyph fonts -->
+            <div class="sample-icons">
+                <igx-icon fontSet="fa-solid" iconName="fa-coffee" color="brown"></igx-icon>
+                <igx-icon fontSet="fa-solid" iconName="fa-keyboard"></igx-icon>
+                <igx-icon fontSet="fa-solid" iconName="fa-file-code" color="#2ca7e1"></igx-icon>
+                <igx-icon fontSet="fa-solid" iconName="fa-headphones" color="#4eb862"></igx-icon>
+                <igx-icon fontSet="fa-solid" iconName="fa-bug" color="crimson"></igx-icon>
+            </div>
+        </article>
     </section>
+
 </div>
